Release/v1.0.0 (#118)
* feat: direccion hospitales (#94)

* feat: direccion hospitales

* feat: mapa de calor done

* Feature/change to sql functions (#95)

* feat: Create h2 mock functions to replicate sql functions

* feat: Change repositories to use sql functions

* chore: Format code

* Chore/remove optional auth logic (#96)

* chore: remove tryOptionalAuth logic

* feat: Update mock firebase filter to respect prod logic

* feat: create mock user token service for tests

* feat: Fix tests for new endpoints

* chore: format remaining code

* Feature/show monthly reports

* Implemented get monthly reports

* Feature/show monthly reports (#98)

* Fixed format

* Fix/critical medicines (#99)

* refactor: scope endpoint to single hospital

* refactor: now it receives the id of the hospital and returns the list of critical medicines attached to that single hospital

* updated unit tests to match single-hospital use case

* updated unit tests to match single-hospital use case

* Style changes

* Changed the threshold for the critical medicines from 100 to 10

* Modified the test

* Chore/refactor medicines hospitals (#100)

* Moved and renamed MedicinesHospitalsStockAverages from models to dtos

* Moved and renamed StockReportResponse from models to dtos

* Chore/refactor medicines hospitals (#101)

* Fixed comment

* feat: Google Sign-In for citizen role (#102)

* feat: add verifyIdToken and TokenVerification to UserTokenService

* feat: implement verifyIdToken in FirebaseUserAuthService

* feat: implement verifyIdToken in MockUserTokenService

* feat: add GoogleSignInUseCase with auto-provision and role enforcement

* fix: set citizen role name in auto-provision

* feat: add GET /auth/google endpoint for citizen Google sign-in

* chore: add codegraph index gitignore

* fix: resolve suburb in toProfileDto for existing citizens

* chore: spotless formatting fixes

* refactor: move Bearer token parsing into use case, fix inline import

* chore: remove codegraph index fr