@@ -5,7 +5,6 @@ import com.itesm.domain.repository.HospitalRepository;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class GetHospitalsUseCase {
@@ -20,6 +19,6 @@ public class GetHospitalsUseCase {
     public List<HospitalDto> execute() {
         return hospitalRepository.findAllHospitals().stream()
                 .map(h -> new HospitalDto(h.getId(), h.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
